# nanochat

./: .env.example  README.md  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  auth.py  health.py  roles.py
app/core/: __init__.py  config.py  error_codes.py  events.py  exceptions.py  log_config.py  logging.py  permissions.py  redis.py  security.py
app/db/: __init__.py  session.py
app/middleware/: __init__.py  access_log.py  exception_handler.py  logging.py  request_id.py
app/models/: __init__.py  base.py  permission.py  role.py  tenant.py  user.py  user_role.py
app/repositories/: __init__.py  base.py  permission_repository.py  role_repository.py  tenant_repository.py  user_repository.py  user_role_repository.py
app/schemas/: __init__.py  auth.py  response.py  role.py  tenant.py  user.py
app/services/: __init__.py  role_service.py  token_service.py  user_service.py
app/utils/: __init__.py  jwt.py  response.py
